[UP] new order, better killing process, new animations

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,25 @@ workspace=HDMI-A-1,1
 #monitor=eDP-1,addreserved,10,10,10,10
 #workspace=eDP-1,1
 
+exec-once=.config/hypr/desktop-portals.sh
+
+#exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
+exec-once=swww init && swww img ~/.config/hypr/wallpapers/livepixelart.gif
+
+exec-once=~/.config/hypr/scripts/notifications
+
+exec-once=~/.config/hypr/scripts/statusbar
+
+exec-once=~/.config/hypr/scripts/startup
+
+exec=hyprshade auto
+
+exec-once=blueman-applet
+
+exec-once=swayidle -w before-sleep swaylock
+
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
+
 input {
     kb_layout=fr
     kb_variant=
@@ -31,10 +50,11 @@ general {
     # main_mod=SUPER
 
     layout=dwindle
+
     sensitivity=1.0 # for mouse cursor
 
     gaps_in=5
-    gaps_out=10
+    gaps_out=20
 
     border_size=3
     col.active_border=0xFFB4A1DB
@@ -46,7 +66,6 @@ general {
 
 decoration {
     rounding=12       # Original: rounding=-1
-    multisample_edges=0
 
     drop_shadow=true
     shadow_range=15
@@ -63,6 +82,11 @@ decoration {
         ignore_opacity=true
         new_optimizations=on
     }
+
+    dim_inactive = false
+    dim_strength = 0.2
+
+    multisample_edges=true
 }
 
 blurls=waybar
@@ -78,12 +102,26 @@ animations {
     # animation=workspaces,1,8,default
     #animation=workspaces,1,6,overshot
 
-    # New
-    bezier=overshot,0.13,0.99,0.29,1.1
-    animation=windows,1,4,overshot,popin
-    animation=fade,1,10,default
-    animation=workspaces,1,6,overshot,slide
-    animation=border,1,10,default
+    # Old
+    # bezier=overshot,0.13,0.99,0.29,1.1
+    # animation=windows,1,4,overshot,popin
+    # animation=fade,1,10,default
+    # animation=workspaces,1,6,overshot,slide
+    # animation=border,1,10,default
+
+    bezier=myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier=myBezier2, 0.65, 0, 0.35, 1
+
+    bezier=slow,0,0.85,0.3,1
+    bezier=overshot,0.7,0.6,0.1,1.1
+    bezier=bounce,1,1.6,0.1,0.85
+    bezier=slingshot,1,-1,0.15,1.25
+    bezier=nice,0,6.9,0.5,-4.20
+
+    animation=windows,1,5,bounce,popin
+    animation=border,1,20,default
+    animation=fade,1,5,default
+    animation=workspaces,1,5,overshot,slide
 }
 
 dwindle {
@@ -91,11 +129,15 @@ dwindle {
     preserve_split=true
 }
 
+binds {
+  workspace_back_and_forth = true
+}
+
 misc {
   disable_hyprland_logo=true
   disable_splash_rendering=true
   mouse_move_enables_dpms=true
-  vfr = false
+  vfr=false
 }
 
 gestures {
@@ -166,7 +208,6 @@ $browser = brave
 bind=SUPER,Return,exec,$term
 bind=SUPERSHIFT,Return,exec,$term
 bind=SUPERALT,Return,exec,$term -f
-bind=SUPER,T,exec,$term -F
 
 bind=SUPERSHIFT,F,exec,$files
 bind=SUPERSHIFT,E,exec,$editor
@@ -238,33 +279,13 @@ bind=ALT,E,movetoworkspace,2
 bind=ALT,R,movetoworkspace,3
 bind=ALT,T,movetoworkspace,4
 bind=ALT,Y,movetoworkspace,5
-bind=ALT,U,movetoworkspace,6
-bind=ALT,I,movetoworkspace,7
-bind=ALT,O,movetoworkspace,8
+bind=ALT,7,movetoworkspace,6
+bind=ALT,8,movetoworkspace,7
+bind=ALT,9,movetoworkspace,8
 
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
 
-exec-once=~/.config/hypr/scripts/notifications
-
-exec=~/.config/hypr/scripts/statusbar
-
-exec-once=~/.config/hypr/scripts/startup
-
-exec=hyprshade auto
-
-exec-once=blueman-applet
-
 # For screen sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=~/.config/hypr/scripts/screensharing.sh
-
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
-
-# exec-once = [workspace 1 silent;noanim] firefox
-# exec-once = [workspace 2 silent;noanim] wezterm
-# exec-once=[workspace 3 silent;noanim] discord
-
-#exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
-exec-once=swww init && swww img ~/.config/hypr/wallpapers/livepixelart.gif
