--- a/wofi/config
+++ b/wofi/config
@@ -19,7 +19,7 @@ dynamic_lines=false
 ## Images
 allow_markup=true
 allow_images=true
-image_size=24
+image_size=30
 
 ## Search
 exec_search=false
@@ -37,3 +37,7 @@ filter_rate=100
 ## Keys
 key_expand=Tab
 key_exit=Escape
+key_down=Control_L-j
+key_up=Control_L-k
+key_right=Control_L-l
+key_left=Control_L-h
