--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,7 +13,7 @@ workspace=HDMI-A-1,1
 #monitor=eDP-1,addreserved,10,10,10,10
 #workspace=eDP-1,1
 
-exec-once=.config/hypr/desktop-portals.sh
+exec-once=~/.config/hypr/scripts/desktop-portals.sh
 
 #exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
 exec-once=swww init && swww img ~/.config/hypr/wallpapers/livepixelart.gif
@@ -191,7 +191,7 @@ windowrule=opacity 1.0,^(Brave-browser)$
 # $term = ~/.config/hypr/scripts/terminal
 $term = terminator
 $wifimenu = ~/.config/wofi/wifimenu.sh
-$menu2 = ~/.config/hypr/scripts/menu
+$appmenu = ~/.config/hypr/scripts/menu
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
@@ -214,7 +214,7 @@ bind=SUPERSHIFT,E,exec,$editor
 bind=SUPERSHIFT,W,exec,$browser
 
 bind=ALT,F1,exec,$wifimenu
-bind=SUPER,D,exec,$menu2
+bind=SUPER,D,exec,$appmenu
 bind=SUPER,X,exec,$powermenu
 
 bind=SUPER,N,exec,nm-connection-editor
