--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,8 @@ workspace=HDMI-A-1,1
 exec-once=~/.config/hypr/scripts/desktop-portals.sh
 
 #exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
-exec-once=swww init && swww img ~/.config/hypr/wallpapers/livepixelart.gif
+exec-once=swww init
+exec=swww img ~/.config/hypr/wallpapers/livepixelart.gif
 
 exec-once=~/.config/hypr/scripts/notifications
 
@@ -28,7 +29,8 @@ exec=hyprshade auto
 
 exec-once=blueman-applet
 
-exec-once=swayidle -w before-sleep swaylock
+exec-once=swayidle -w timeout 200 scripts/lockscreen
+exec-once=swayidle -w before-sleep scripts/lockscreen
 
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
@@ -59,6 +61,8 @@ general {
     border_size=3
     col.active_border=0xFFB4A1DB
     col.inactive_border=0xFF343A40
+    # col.active_border=0xff5e81ac
+    # col.inactive_border=0x66333333
 
     # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -72,12 +76,12 @@ decoration {
     col.shadow=0xffa7caff
     col.shadow_inactive=0x50000000
 
-    active_opacity=0.9
+    active_opacity=0.8
     inactive_opacity=0.7
     fullscreen_opacity=1.0
 
     blur {
-        size=2 # minimum 1
+        size=4 # minimum 1
         passes=2 # minimum 1, more passes = more resource intensive.
         ignore_opacity=true
         new_optimizations=on
@@ -88,9 +92,6 @@ decoration {
 
     multisample_edges=true
 }
-
-blurls=waybar
-blurls=lockscreen
 
 animations {
     enabled=1
@@ -184,7 +185,7 @@ windowrule=animation slide,wlogout
 #windowrule=animation slide left,abc
 #windowrule=rounding 10,abc
 
-windowrule=opacity 0.9 override 0.8,^(Emacs)$
+windowrule=opacity 0.8 override 0.8,^(Emacs)$
 windowrulev2=opacity 1.0 ,fullscreen:1,class:^(Emacs)$
 windowrule=opacity 1.0,^(Brave-browser)$
 
@@ -197,7 +198,8 @@ $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
 $backlight = ~/.config/hypr/scripts/brightness
 $screenshot = ~/.config/hypr/scripts/screenshot
-$lockscreen = ~/.config/hypr/scripts/lockscreen
+# $lockscreen = ~/.config/hypr/scripts/lockscreen
+$lockscreen = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 #$files = nemo
