--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -72,10 +72,10 @@ general {
     # col.group_border_active = rgb(bd93f9)
 
     # Nord Theme
-    col.active_border = rgb(88C0D0)
+    col.active_border = rgb(88c0d0)
     col.inactive_border = rgba(44475aaa)
     col.group_border = rgba(282a36dd)
-    col.group_border_active = rgb(88C0D0)
+    col.group_border_active = rgb(88c0d0)
 
     # col.active_border=0xff5e81ac
     # col.inactive_border=0x66333333
@@ -98,9 +98,8 @@ decoration {
     shadow_scale = 0.97
 
     col.shadow_inactive=0x50000000
-    # col.shadow=0xffa7caff
-    # Dracula Theme
     col.shadow = rgba(1E202966)
+    # col.shadow=0xffa7caff
 
     active_opacity=0.8
     inactive_opacity=0.7
