[UP] increase time before sleep and del forgotten '&'

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,11 +31,11 @@ exec=hyprshade auto
 
 exec-once=blueman-applet
 
-exec-once=swayidle -w timeout 200 '~/.config/hypr/scripts/lockscreen' before-sleep '~/.config/hypr/scripts/lockscreen'
+exec-once=swayidle -w timeout 300 '~/.config/hypr/scripts/lockscreen' before-sleep '~/.config/hypr/scripts/lockscreen'
 
 # exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 input {
     kb_layout=fr
