[ADD] emacs everywhere keybinding

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -186,7 +186,7 @@ windowrule=float,xfce4-appfinder
 windowrulev2=float,class:^()$,title:^(Picture in picture)$
 windowrulev2=float,class:^(brave)$,title:^(Save File)$
 windowrulev2=float,class:^(brave)$,title:^(Open File)$
-windowrulev2=float,class:^(brave)$,title:^(Bitwarden)$
+windowrulev2=float,class:^(brave-browser)$,title:^(Bitwarden - Brave)$
 windowrulev2=float,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.twosheds.iwgtk)$
 windowrulev2=float,class:^(blueberry.py)$
@@ -231,6 +231,7 @@ $colorpicker = ~/.config/hypr/scripts/colorpicker
 #$files = nemo
 $files = files
 $editor = emacsclient -c -n -a 'emacs'
+$editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
 $browser = brave
 
 bind=SUPER,Return,exec,$term
@@ -239,6 +240,7 @@ bind=SUPERALT,Return,exec,$term -f
 
 bind=SUPERSHIFT,F,exec,$files
 bind=SUPERSHIFT,E,exec,$editor
+bind=SUPERSHIFT,I,exec,$editor-everywhere
 bind=SUPERSHIFT,W,exec,$browser
 
 bind=ALT,F1,exec,$wifimenu
