--- a/waybar/config
+++ b/waybar/config
@@ -18,8 +18,8 @@
         "format": "{name}: {icon}",
         "format-icons": {
             "urgent": "",
-            "active": "",
-            "default": ""
+            "active": "",
+            "default": ""
         }
     },
 
