--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,14 @@
 monitor=eDP-1,1920x1080@60,1920x0,1
 workspace=eDP-1,2
-monitor=HDMI-A-1,1920x1080@60,0x0,1
+# monitor=HDMI-A-1,1920x1080@60,0x0,1
+monitor=HDMI-A-1,preferred,0x0,1
 workspace=HDMI-A-1,1
- # monitor=DP-2,1920x1080@144,0x0,1
-monitor=,preferred,auto,1
+
+# monitor=HDMI-A-1,preferred,auto,1
 # monitor=DP-2,1920x1080@144,0x0,1
- # workspace=DP-2,1
- # monitor=DVI-D-1,1920x1080@60,1920x0,1
- # workspace=DVI-D-1,2
+# workspace=DP-2,1
+# monitor=DVI-D-1,1920x1080@60,1920x0,1
+# workspace=DVI-D-1,2
 
 # Example :
 #monitor=eDP-1,1920x1080@60,0x0,1
@@ -249,7 +250,6 @@ bind=SUPER,X,exec,$powermenu
 
 bind=SUPER,N,exec,nm-connection-editor
 bind=SUPER,P,exec,$colorpicker
-# bind=SUPER,X,exec,$wlogout
 bind=CTRLALT,L,exec,$lockscreen
 
 bindm=SUPER,mouse:272,movewindow
@@ -278,6 +278,7 @@ bind=SUPER,F,fullscreen,
 bind=SUPER,Space,togglefloating,
 bind=SUPERSHIFT,Space,togglesplit,
 bind=SUPER,S,pseudo,
+bind=SUPER,O,toggleopaque
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
