--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -83,6 +83,9 @@ general {
 
     # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+
+    # Make the cursor disappear after 3 seconds
+    cursor_inactive_timeout=3
 }
 
 decoration {
