--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,8 +1,8 @@
-monitor=eDP-1,1920x1080@60,1920x0,1
-workspace=eDP-1,2
+# monitor=eDP-1,1920x1080@60,1920x0,1
+# workspace=eDP-1,2
+# monitor=HDMI-A-1,preferred,0x0,1
+# workspace=HDMI-A-1,1
 # monitor=HDMI-A-1,1920x1080@60,0x0,1
-monitor=HDMI-A-1,preferred,0x0,1
-workspace=HDMI-A-1,1
 
 # monitor=HDMI-A-1,preferred,auto,1
 # monitor=DP-2,1920x1080@144,0x0,1
@@ -10,11 +10,10 @@ workspace=HDMI-A-1,1
 # monitor=DVI-D-1,1920x1080@60,1920x0,1
 # workspace=DVI-D-1,2
 
-# Example :
-#monitor=eDP-1,1920x1080@60,0x0,1
-#monitor=eDP-1,transform,0
-#monitor=eDP-1,addreserved,10,10,10,10
-#workspace=eDP-1,1
+monitor=eDP-1,1920x1080@60,0x0,1
+workspace=eDP-1,1
+monitor=HDMI-A-1,preferred,1920x0,1
+workspace=HDMI-A-1,2
 
 exec-once=~/.config/hypr/scripts/desktop-portals.sh
 
