--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -62,29 +62,35 @@ general {
     gaps_out=15
 
     border_size=3
-    # col.active_border=0xFFB4A1DB
-    # col.inactive_border=0xFF343A40
 
     # Dracula Theme
     # col.active_border = rgb(bd93f9)
     # col.inactive_border = rgba(44475aaa)
-    # col.group_border = rgba(282a36dd)
-    # col.group_border_active = rgb(bd93f9)
 
     # Nord Theme
     col.active_border = rgb(88c0d0)
     col.inactive_border = rgba(44475aaa)
-    col.group_border = rgba(282a36dd)
-    col.group_border_active = rgb(88c0d0)
 
     # col.active_border=0xff5e81ac
     # col.inactive_border=0x66333333
+    # col.active_border=0xFFB4A1DB
+    # col.inactive_border=0xFF343A40
 
     # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     # Make the cursor disappear after 3 seconds
     cursor_inactive_timeout=3
+}
+
+group {
+    # Dracula Theme
+    # col.group_border = rgba(282a36dd)
+    # col.group_border_active = rgb(bd93f9)
+
+    # Nord Theme
+    col.border_active = rgb(88c0d0)
+    col.border_inactive = rgba(282a36dd)
 }
 
 decoration {
@@ -117,8 +123,6 @@ decoration {
 
     dim_inactive = false
     dim_strength = 0.2
-
-    multisample_edges=true
 }
 
 animations {
