--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,20 +1,20 @@
-monitor=eDP-1,1920x1080@60,1920x0,1
-workspace=eDP-1,2
-monitor=HDMI-A-1,preferred,0x0,1
-workspace=HDMI-A-1,1
+# monitor=eDP-1,1920x1080@60,1920x0,1
+# workspace=eDP-1,2
+# monitor=HDMI-A-1,preferred,0x0,1
+# workspace=HDMI-A-1,1
 
 # monitor=HDMI-A-1,1920x1080@60,0x0,1
+
+monitor=eDP-1,1920x1080@60,0x0,1
+workspace=eDP-1,1
+monitor=HDMI-A-1,preferred,1920x0,1
+workspace=HDMI-A-1,2
 
 # monitor=HDMI-A-1,preferred,auto,1
 # monitor=DP-2,1920x1080@144,0x0,1
 # workspace=DP-2,1
 # monitor=DVI-D-1,1920x1080@60,1920x0,1
 # workspace=DVI-D-1,2
-
-# monitor=eDP-1,1920x1080@60,0x0,1
-# workspace=eDP-1,1
-# monitor=HDMI-A-1,preferred,1920x0,1
-# workspace=HDMI-A-1,2
 
 exec-once=~/.config/hypr/scripts/desktop-portals.sh
 
@@ -111,9 +111,9 @@ decoration {
     col.shadow = rgba(1E202966)
     # col.shadow=0xffa7caff
 
-    active_opacity=0.8
-    inactive_opacity=0.7
-    fullscreen_opacity=1.0
+    active_opacity=0.9
+    inactive_opacity=0.8
+    fullscreen_opacity=0.9
 
     blur {
         size=4 # minimum 1
@@ -219,7 +219,7 @@ windowrule=animation slide,wlogout
 #windowrule=animation slide left,abc
 #windowrule=rounding 10,abc
 
-windowrule=opacity 0.8 override 0.8,^(Emacs)$
+windowrule=opacity 0.9 override 0.9,^(Emacs)$
 windowrule=opacity 0.8 override 1.0,^(brave)$
 windowrulev2=opacity 1.0,fullscreen:1,class:^(Emacs)$
 
@@ -239,7 +239,8 @@ $colorpicker = ~/.config/hypr/scripts/colorpicker
 #$files = nemo
 $files = files
 $editor = emacsclient -c -n -a 'emacs'
-$editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
+# $editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
+$editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
 
 bind=SUPER,Return,exec,$term
@@ -286,6 +287,9 @@ bind=SUPER,Space,togglefloating,
 bind=SUPERSHIFT,Space,togglesplit,
 bind=SUPER,S,pseudo,
 bind=SUPER,O,toggleopaque
+
+bind = SUPER,Tab,cyclenext,          # change focus to another window
+bind = SUPER,Tab,bringactivetotop,   # bring it to the topbind=SUPER,Space,togglefloating,
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
