--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,8 +19,9 @@ workspace=HDMI-A-1,2
 exec-once=~/.config/hypr/scripts/desktop-portals.sh
 
 #exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
-exec-once=swww init
-exec=swww img ~/.config/hypr/wallpapers/cold_mountain_art_simplist.jpg
+# exec-once=swww img ~/.config/hypr/wallpapers/wallpaper.jpg
+exec-once=swww img ~/Pictures/wallpapers/nature_blue_simplist_art.jpg
+exec-once=swww init; sww kill; sww init
 
 exec-once=~/.config/hypr/scripts/notifications
 
@@ -59,8 +60,8 @@ general {
 
     sensitivity=1.0 # for mouse cursor
 
-    gaps_in=5
-    gaps_out=15
+    gaps_in=4
+    gaps_out=5
 
     border_size=3
 
@@ -72,10 +73,6 @@ general {
     col.active_border = rgb(88c0d0)
     col.inactive_border = rgba(44475aaa)
 
-    # col.active_border=0xff5e81ac
-    # col.inactive_border=0x66333333
-    # col.active_border=0xFFB4A1DB
-    # col.inactive_border=0xFF343A40
 
     # damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -101,27 +98,29 @@ decoration {
     # drop_shadow=true
     # shadow_range=15
 
-    drop_shadow = yes
-    shadow_range = 60
-    shadow_offset = 1 2
-    shadow_render_power = 3
-    shadow_scale = 0.97
+    # Shadow
+    drop_shadow=true
+    shadow_range=8
+    shadow_offset=1 2
+    shadow_render_power=3
+    shadow_scale=0.97
 
     col.shadow_inactive=0x50000000
-    col.shadow = rgba(1E202966)
+    col.shadow=rgba(1E202966)
     # col.shadow=0xffa7caff
 
-    active_opacity=0.9
-    inactive_opacity=0.8
-    fullscreen_opacity=0.9
-
     blur {
+        enabled=true
+        xray=true
+
         size=4 # minimum 1
         passes=2 # minimum 1, more passes = more resource intensive.
+
         ignore_opacity=true
-        new_optimizations=on
+        new_optimizations=true
     }
 
+    # Dim
     dim_inactive = false
     dim_strength = 0.2
 }
@@ -143,24 +142,47 @@ animations {
     # animation=workspaces,1,6,overshot,slide
     # animation=border,1,10,default
 
-    bezier=myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier=myBezier2, 0.65, 0, 0.35, 1
+    # Old
+    # bezier=myBezier, 0.05, 0.9, 0.1, 1.05
+    # bezier=myBezier2, 0.65, 0, 0.35, 1
 
-    bezier=slow,0,0.85,0.3,1
-    bezier=overshot,0.7,0.6,0.1,1.1
-    bezier=bounce,1,1.6,0.1,0.85
-    bezier=slingshot,1,-1,0.15,1.25
-    bezier=nice,0,6.9,0.5,-4.20
+    # bezier=slow,0,0.85,0.3,1
+    # bezier=overshot,0.7,0.6,0.1,1.1
+    # bezier=bounce,1,1.6,0.1,0.85
+    # bezier=slingshot,1,-1,0.15,1.25
+    # bezier=nice,0,6.9,0.5,-4.20
 
-    animation=windows,1,5,bounce,popin
-    animation=border,1,20,default
-    animation=fade,1,5,default
-    animation=workspaces,1,5,overshot,slide
-}
+    # animation=windows,1,5,bounce,popin
+    # animation=border,1,20,default
+    # animation=fade,1,5,default
+    # animation=workspaces,1,5,overshot,slide
+
+    # New
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    # Animation configs
+    animation = windows, 1, 3, md3_decel, popin 60%
+    animation = border, 1, 10, default
+    animation = fade, 1, 2.5, md3_decel
+    # animation = workspaces, 1, 3.5, md3_decel, slide
+    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    # animation = workspaces, 1, 7, fluent_decel, slidefade 15%
+    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert}
 
 dwindle {
     pseudotile=0 # enable pseudotiling on dwindle
     preserve_split=true
+    smart_split=false
 }
 
 binds {
@@ -219,9 +241,7 @@ windowrule=animation slide,wlogout
 #windowrule=animation slide left,abc
 #windowrule=rounding 10,abc
 
-windowrule=opacity 0.9 override 0.9,^(Emacs)$
-windowrule=opacity 0.8 override 1.0,^(brave)$
-windowrulev2=opacity 1.0,fullscreen:1,class:^(Emacs)$
+windowrule = opacity 0.94 override 0.93 override, .*
 
 # $term = ~/.config/hypr/scripts/terminal
 $term = terminator
@@ -237,7 +257,7 @@ $lockscreen = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 #$files = nemo
-$files = files
+$files = thunar
 $editor = emacsclient -c -n -a 'emacs'
 # $editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
@@ -251,6 +271,8 @@ bind=SUPERSHIFT,F,exec,$files
 bind=SUPERSHIFT,E,exec,$editor
 bind=SUPERSHIFT,I,exec,$editor-everywhere
 bind=SUPERSHIFT,W,exec,$browser
+bind=SUPERSHIFT,S,exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
+bind=CTRLSHIFT,Escape,exec,btop
 
 bind=ALT,F1,exec,$wifimenu
 bind=SUPER,D,exec,$appmenu
@@ -280,13 +302,19 @@ bind=SHIFT,Print,exec,$screenshot --in10
 bind=CTRL,Print,exec,$screenshot --win
 bind=SUPERCTRL,Print,exec,$screenshot --area
 
+bind = ControlSuperShift,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+
 bind=SUPER,Q,killactive,
 bind=CTRLALT,Delete,exit,
-bind=SUPER,F,fullscreen,
+bind=SUPER,F,fullscreen,0
+bind=SUPERCTRL,F,fullscreen, 1
 bind=SUPER,Space,togglefloating,
 bind=SUPERSHIFT,Space,togglesplit,
 bind=SUPER,S,pseudo,
 bind=SUPER,O,toggleopaque
+
+binde = Super, Minus, splitratio, -0.1
+binde = Super, Equal, splitratio, 0.1
 
 bind = SUPER,Tab,cyclenext,          # change focus to another window
 bind = SUPER,Tab,bringactivetotop,   # bring it to the topbind=SUPER,Space,togglefloating,
@@ -327,6 +355,9 @@ bind=ALT,9,movetoworkspace,8
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
 
+bind=ControlSuper, mouse_up, workspace, +1
+bind=ControlSuper, mouse_down, workspace, -1
+
 # For screen sharing
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
