--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -302,7 +302,7 @@ bind = SHIFT,Print,exec,$screenshot --in10
 bind = CTRL,Print,exec,$screenshot --win
 bind = SUPERCTRL,Print,exec,$screenshot --area
 
-bind = ControlSuperShift,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
 bind = SUPER,Q,killactive,
 bind = CTRLALT,Delete,exit,
