[UP] readd fullscreen opacity

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -109,6 +109,8 @@ decoration {
     col.shadow = rgba(1E202966)
     # col.shadow = 0xffa7caff
 
+    fullscreen_opacity=0.9
+
     blur {
         enabled = true
         xray = true
