[UP] monitors setting based on the current monitor

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,27 +1,20 @@
-# monitor = eDP-1,1920x1080@60,1920x0,1
-# workspace = eDP-1,2
-# monitor = HDMI-A-1,preferred,0x0,1
-# workspace = HDMI-A-1,1
-
-# monitor = HDMI-A-1,1920x1080@60,0x0,1
-
 monitor = eDP-1,1920x1080@60,0x0,1
 workspace = eDP-1,1
-monitor = HDMI-A-1,preferred,1920x0,1
-workspace = HDMI-A-1,2
 
-# monitor = HDMI-A-1,preferred,auto,1
-# monitor = DP-2,1920x1080@144,0x0,1
-# workspace = DP-2,1
-# monitor = DVI-D-1,1920x1080@60,1920x0,1
-# workspace = DVI-D-1,2
+monitor = AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
+workspace = AOC Q3279WG5B 0x0000652C,2
+
+# monitor = HDMI-A-1,preferred,-19200x0,1
+# workspace = HDMI-A-1,1
+
+monitor=,preferred,auto,1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
 #exec-once = swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
 # exec-once = swww img ~/.config/hypr/wallpapers/wallpaper.jpg
 exec-once = swww img ~/Pictures/wallpapers/nature_blue_simplist_art.jpg
-exec-once = swww init; sww kill; sww init
+exec-once = swww init; swww kill; swww init
 
 exec-once = ~/.config/hypr/scripts/notifications
 
