[ADD] explicit env var

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -352,6 +352,11 @@ bind = SUPER,mouse_up,workspace,e-1
 bind = ControlSuper, mouse_up, workspace, +1
 bind = ControlSuper, mouse_down, workspace, -1
 
-# For screen sharing
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+env = GDK_BACKEND=wayland,x11
+env = QT_QPA_PLATFORM="wayland;xcb"
+env = XDG_CURRENT_DESKTOP=Hyprland
+env = XDG_SESSION_TYPE=wayland
+env = XDG_SESSION_DESKTOP=Hyprland
