--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,14 @@
 monitor = eDP-1,1920x1080@60,0x0,1
-workspace = eDP-1,1
+workspace = eDP-1,2
 
-monitor = AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
-workspace = AOC Q3279WG5B 0x0000652C,2
+monitor = des:AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
 
-# monitor = HDMI-A-1,preferred,-19200x0,1
-# workspace = HDMI-A-1,1
+monitor = desc:Iiyama North America PL2390 11298JH100680 ,preferred,-1920x0,1
 
-monitor=,preferred,auto,1
+monitor = ,preferred,auto,1
+workspace = HDMI-A-1,1
+
+# monitor = ,preferred,auto,1,mirror,DP-1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
