[UP] new keybinding for files window

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -251,7 +251,6 @@ $screenshot = ~/.config/hypr/scripts/screenshot
 $lockscreen = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
-#$files = nemo
 $files = thunar
 $editor = emacsclient -c -n -a 'emacs'
 # $editor-everywhere = emacsclient --eval "(emacs-everywhere)" -a "doom +everywhere"
@@ -262,7 +261,7 @@ bind = SUPER,Return,exec,$term
 bind = SUPERSHIFT,Return,exec,$term
 bind = SUPERALT,Return,exec,$term -f
 
-bind = SUPERSHIFT,F,exec,$files
+bind = SUPERSHIFT,T,exec,$files
 bind = SUPERSHIFT,E,exec,$editor
 bind = SUPERSHIFT,I,exec,$editor-everywhere
 bind = SUPERSHIFT,W,exec,$browser
