[UP] enable dim and update blur size

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -87,10 +87,6 @@ group {
 decoration {
     rounding = 4       # Original: rounding = -1
 
-    # Old
-    # drop_shadow = true
-    # shadow_range = 15
-
     # Shadow
     drop_shadow = true
     shadow_range = 8
@@ -108,7 +104,7 @@ decoration {
         enabled = true
         xray = true
 
-        size = 4 # minimum 1
+        size = 5 # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
 
         ignore_opacity = true
@@ -116,8 +112,8 @@ decoration {
     }
 
     # Dim
-    dim_inactive = false
-    dim_strength = 0.2
+    dim_inactive = true
+    dim_strength = 0.1
 }
 
 animations {
@@ -236,7 +232,7 @@ windowrule = animation slide,wlogout
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
 
-windowrule = opacity 0.94 override 0.93 override, .*
+windowrule = opacity 0.94 override 0.94 override, .*
 
 # $term = ~/.config/hypr/scripts/terminal
 $term = terminator
