--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,6 +33,8 @@ exec-once = swayidle -w timeout 300 '~/.config/hypr/scripts/sleep' before-sleep 
 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+exec-once = wal -R
+
 input {
     kb_layout = fr
     kb_variant =
@@ -102,7 +104,7 @@ decoration {
 
     blur {
         enabled = true
-        xray = true
+        xray = false
 
         size = 5 # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
@@ -232,11 +234,14 @@ windowrule = animation slide,wlogout
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
 
-windowrule = opacity 0.94 override 0.94 override, .*
+windowrule = opacity 0.90 override 0.90 override, .*
 
 # $term = ~/.config/hypr/scripts/terminal
 $term = terminator
+$term1 = kitty
+$term2 = alacritty
 $wifimenu = ~/.config/wofi/wifimenu.sh
+$wallpapermenu = ~/.config/wofi/wallpaper.sh
 $appmenu = ~/.config/hypr/scripts/menu
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
@@ -254,8 +259,8 @@ $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
 
 bind = SUPER,Return,exec,$term
-bind = SUPERSHIFT,Return,exec,$term
-bind = SUPERALT,Return,exec,$term -f
+bind = SUPERSHIFT,Return,exec,$term1
+bind = SUPERALT,Return,exec,$term2
 
 bind = SUPERSHIFT,T,exec,$files
 bind = SUPERSHIFT,E,exec,$editor
@@ -267,6 +272,7 @@ bind = CTRLSHIFT,Escape,exec,btop
 bind = ALT,F1,exec,$wifimenu
 bind = SUPER,D,exec,$appmenu
 bind = SUPER,X,exec,$powermenu
+bind = SUPER,W,exec,$wallpapermenu
 
 bind = SUPER,N,exec,nm-connection-editor
 bind = SUPER,P,exec,$colorpicker
@@ -307,12 +313,16 @@ binde = SUPERCTRL, Minus, splitratio, -0.1
 binde = SUPERCTRL, Equal, splitratio, 0.1
 
 bind = SUPER,Tab,cyclenext,          # change focus to another window
-bind = SUPER,Tab,bringactivetotop,   # bring it to the topbind = SUPER,Space,togglefloating,
+bind = SUPER,Tab,bringactivetotop,   # bring it to the top
 
 bind = SUPER,H,movefocus,l
+bind = SUPER,H,bringactivetotop
 bind = SUPER,L,movefocus,r
+bind = SUPER,L,bringactivetotop
 bind = SUPER,K,movefocus,u
+bind = SUPER,K,bringactivetotop
 bind = SUPER,J,movefocus,d
+bind = SUPER,J,bringactivetotop
 
 bind = SUPERSHIFT,H,movewindow,l
 bind = SUPERSHIFT,L,movewindow,r
