[ADD] make waybar and wofi use variable (add nord and dracula colors)

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 !hypr/
 !mako/
 !screenshots/
+!colors/
 
 # Allow screenshots
 !screenshots/**
@@ -20,6 +21,7 @@
 !waybar/**
 !hypr/**
 !mako/**
+!colors/**
 
 hypr/hyprland-bkp.conf
 hypr/wallpapers/*
