[UP] let powerbutton pc sleep and sway handle lock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,8 @@ exec = hyprshade auto
 
 exec-once = blueman-applet
 
+exec-once = swayidle -w before-sleep '~/.config/hypr/scripts/lockscreen'
+
 # exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -289,7 +291,6 @@ bind = ,XF86AudioNext,exec,playerctl next
 bind = ,XF86AudioPrev,exec,playerctl previous
 bind = ,XF86AudioPlay,exec,playerctl play-pause
 bind = ,XF86AudioStop,exec,playerctl stop
-bind = ,XF86PowerOff,exec,$lockscreen
 
 bind = ,Print,exec,$screenshot --now
 bind = SUPER,Print,exec,$screenshot --in5
