--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -247,6 +247,7 @@ $term1 = kitty
 $term2 = alacritty
 $wifimenu = ~/.config/wofi/wifimenu.sh
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
+$thememenu = ~/.config/wofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
@@ -278,6 +279,7 @@ bind = ALT,F1,exec,$wifimenu
 bind = SUPER,D,exec,$appmenu
 bind = SUPER,X,exec,$powermenu
 bind = SUPER,W,exec,$wallpapermenu
+bind = SUPER,T,exec,$thememenu
 
 bind = SUPER,N,exec,nm-connection-editor
 bind = SUPER,P,exec,$colorpicker
