[UP] use alacritty as default term

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -241,7 +241,6 @@ windowrule = animation slide,wlogout
 
 windowrule = opacity 0.90 override 0.90 override, .*
 
-# $term = ~/.config/hypr/scripts/terminal
 $term = terminator
 $term1 = kitty
 $term2 = alacritty
@@ -264,9 +263,9 @@ $editor = emacsclient -c -n -a 'emacs'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
 
-bind = SUPER,Return,exec,$term
+bind = SUPER,Return,exec,$term2
 bind = SUPERSHIFT,Return,exec,$term1
-bind = SUPERALT,Return,exec,$term2
+bind = SUPERALT,Return,exec,$term
 
 bind = SUPERSHIFT,T,exec,$files
 bind = SUPERSHIFT,E,exec,$editor
