--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,13 +17,13 @@ exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 exec-once = swww img ~/Pictures/wallpapers/nature_blue_simplist_art.jpg
 exec-once = swww init; swww kill; swww init
 
-exec-once = ~/.config/hypr/scripts/notifications
+exec = ~/.config/hypr/scripts/notifications
 
 exec-once = ~/.config/hypr/scripts/statusbar
 
 exec-once = ~/.config/hypr/scripts/startup
 
-exec = hyprshade auto
+exec-once = hyprshade auto
 
 exec-once = blueman-applet
 
@@ -273,6 +273,7 @@ bind = SUPERSHIFT,I,exec,$editor-everywhere
 bind = SUPERSHIFT,W,exec,$browser
 bind = SUPERSHIFT,S,exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = CTRLSHIFT,Escape,exec,btop
+bind = SUPERSHIFT,N,exec,swaync-client -t -sw
 
 bind = ALT,F1,exec,$wifimenu
 bind = SUPER,D,exec,$appmenu
