--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -300,9 +300,9 @@ bind = ,XF86AudioPlay,exec,playerctl play-pause
 bind = ,XF86AudioStop,exec,playerctl stop
 
 bind = ,Print,exec,$screenshot --now
-bind = SUPER,Print,exec,$screenshot --in5
+bind = CTRL,Print,exec,$screenshot --in5
 bind = SHIFT,Print,exec,$screenshot --in10
-bind = CTRL,Print,exec,$screenshot --win
+bind = SUPER,Print,exec,$screenshot --win
 bind = SUPERCTRL,Print,exec,$screenshot --area
 
 bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
