--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,6 +35,8 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 exec-once = wal -R
 
+exec-once = nm-applet --indicator
+
 input {
     kb_layout = fr
     kb_variant =
