[UP] use new border color for group

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,7 +63,7 @@ general {
     gaps_in = 3
     gaps_out = 7
 
-    border_size = 3
+    border_size = 4
 
     # Dracula Theme
     # col.active_border = rgb(bd93f9)
@@ -89,8 +89,11 @@ group {
     # col.group_border_active = rgb(bd93f9)
 
     # Nord Theme
-    col.border_active = rgb(88c0d0)
-    col.border_inactive = rgba(282a36dd)
+    # col.border_active = rgb(88c0d0)
+    # col.border_inactive = rgba(282a36dd)
+
+    col.border_active = $color1
+    col.border_inactive = $color0
 }
 
 decoration {
@@ -246,7 +249,6 @@ windowrule = opacity 0.90 override 0.90 override, .*
 $term = terminator
 $term1 = kitty
 $term2 = alacritty
-$wifimenu = ~/.config/wofi/wifimenu.sh
 $wallpapermenu = ~/.config/wofi/wallpaper.sh
 $thememenu = ~/.config/wofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu
@@ -277,7 +279,6 @@ bind = SUPERSHIFT,S,exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = CTRLSHIFT,Escape,exec,btop
 bind = SUPERSHIFT,N,exec,swaync-client -t -sw
 
-bind = ALT,F1,exec,$wifimenu
 bind = SUPER,D,exec,$appmenu
 bind = SUPER,X,exec,$powermenu
 bind = SUPER,W,exec,$wallpapermenu
