--- a/waybar/config
+++ b/waybar/config
@@ -3,8 +3,9 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "output": "eDP-1",
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
+    // "height": 30, // Waybar height (to be removed for auto height)
+    "margin-top": 3,
+    "width": 1800, // Waybar width
     "spacing": 8, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces", "cpu", "memory", "temperature", "tray", "custom/media"],
@@ -20,8 +21,8 @@
             "urgent": "",
             "active": "",
             "default": ""
-        }
-    },
+        },
+       },
 
     "keyboard-state": {
         "numlock": true,
@@ -69,12 +70,12 @@
     },
 
     "custom/pacman": {
-        "format": "{} ",
+        "format": "{} 󰢰",
         "interval": 3600,                     // every hour
-        "exec": "checkupdates | wc -l",       // # of updates
+        "exec": "checkupdates | wc -l",       // check for updates
         "exec-if": "exit 0",                  // always run; consider advanced run conditions
         "on-click": "termite -e 'sudo pacman -Syyu'; pkill -SIGRTMIN+8 waybar", // update system
-        "signal": 8
+        "signal": 8,
     },
 
     "tray": {
