[FIX] workspaces shortcuts

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -348,19 +348,19 @@ bind = SUPER,ampersand,workspace,1
 bind = SUPER,eacute,workspace,2
 bind = SUPER,quotedbl,workspace,3
 bind = SUPER,apostrophe,workspace,4
-bind = SUPER,egrave,workspace,5
+bind = SUPER,parenleft,workspace,5
 bind = SUPER,minus,workspace,6
-bind = SUPER,underscore,workspace,7
-bind = SUPER,agrave,workspace,8
+bind = SUPER,egrave,workspace,7
+bind = SUPER,underscore,workspace,8
 
 bind = ALT,ampersand,movetoworkspace,1
 bind = ALT,eacute,movetoworkspace,2
 bind = ALT,quotedbl,movetoworkspace,3
 bind = ALT,apostrophe,movetoworkspace,4
-bind = ALT,egrave,movetoworkspace,5
+bind = ALT,parenleft,movetoworkspace,5
 bind = ALT,minus,movetoworkspace,6
-bind = ALT,underscore,movetoworkspace,7
-bind = ALT,agrave,movetoworkspace,8
+bind = ALT,egrave,movetoworkspace,7
+bind = ALT,underscore,movetoworkspace,8
 
 bind = SUPER,mouse_down,workspace,e+1
 bind = SUPER,mouse_up,workspace,e-1
