--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,10 +27,14 @@ exec-once = hyprshade auto
 
 exec-once = blueman-applet
 
-exec-once = swayidle -w before-sleep '~/.config/hypr/scripts/lockscreen'
+exec-once = swayidle -w \
+            timeout 240 'brightnessctl --save; brightnessctl set 20%' \
+            timeout 300 'notify-send Going to sleep in less a minute' \
+            timeout 360 '~/.config/hypr/scripts/sleep' \
+                resume 'brightnessctl --restore' \
+            before-sleep '~/.config/hypr/scripts/lockscreen'
 
 # exec-once = /usr/lib/polkit-kde-authentication-agent-1
-
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 exec-once = wal -R
