--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -74,6 +74,7 @@ general {
     # col.active_border = rgb(88c0d0)
     # col.inactive_border = rgba(44475aaa)
 
+    # Theme from pywal
     col.active_border = $color1
     col.inactive_border = $color0
 
@@ -93,6 +94,7 @@ group {
     # col.border_active = rgb(88c0d0)
     # col.border_inactive = rgba(282a36dd)
 
+    # Theme from pywal
     col.border_active = $color1
     col.border_inactive = $color0
 }
@@ -142,6 +144,7 @@ animations {
     bezier = easeInOutCirc, 0.85, 0, 0.15, 1
     bezier = easeOutCirc, 0, 0.55, 0.45, 1
     bezier = easeOutExpo, 0.16, 1, 0.3, 1
+
     # Animation configs
     animation = windows, 1, 3, md3_decel, popin 60%
     animation = border, 1, 10, default
@@ -223,8 +226,8 @@ $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
 $backlight = ~/.config/hypr/scripts/brightness
 $screenshot = ~/.config/hypr/scripts/screenshot
-# $lockscreen = ~/.config/hypr/scripts/lockscreen
-$lockscreen = ~/.config/hypr/scripts/suspend
+$lockscreen = ~/.config/hypr/scripts/lockscreen
+$suspend = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 $files = thunar
@@ -252,7 +255,7 @@ bind = SUPER,T,exec,$thememenu
 
 bind = SUPER,N,exec,nm-connection-editor
 bind = SUPER,P,exec,$colorpicker
-bind = CTRLALT,L,exec,$lockscreen
+bind = CTRLALT,L,exec,$suspend
 
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
