--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,14 +1,15 @@
-monitor = eDP-1,1920x1080@60,0x0,1
-workspace = eDP-1,2
+monitor = eDP-1, 1920x1080@60, 0x0,1
+workspace = eDP-1, 2
 
-monitor = des:AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
+monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
+monitor = desc:AOC U32E2WG6 QELM5JA000186, preferred, 1920x0, 1.5
 
-monitor = desc:Iiyama North America PL2390 11298JH100680 ,preferred,-1920x0,1
+monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
-monitor = ,preferred,auto,1
-workspace = HDMI-A-1,1
+monitor = ,preferred, auto, 1
+workspace = HDMI-A-1, 1
 
-# monitor = ,preferred,auto,1,mirror,DP-1
+# monitor = , preferred, auto, 1, mirror, eDP-1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
@@ -27,7 +28,7 @@ exec-once = blueman-applet
 
 exec-once = swayidle -w \
             timeout 240 'brightnessctl --save; brightnessctl set 20%' \
-            timeout 300 'notify-send Going to sleep in less a minute' \
+            timeout 300 'notify-send "Going to sleep in less a minute"' \
             timeout 360 '~/.config/hypr/scripts/sleep' \
                 resume 'brightnessctl --restore' \
             before-sleep '~/.config/hypr/scripts/lockscreen'
@@ -115,14 +116,10 @@ decoration {
     fullscreen_opacity=0.9
 
     blur {
-        enabled = true
-        xray = false
-
         size = 5 # minimum 1
         passes = 2 # minimum 1, more passes = more resource intensive.
 
-        ignore_opacity = true
-        new_optimizations = true
+        ignore_opacity = false
     }
 
     # Dim
@@ -281,8 +278,8 @@ bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 0000
 
 bind = SUPER,Q,killactive,
 bind = CTRLALT,Delete,exit,
-bind = SUPER,F,fullscreen,1
-bind = SUPERSHIFT,F,fullscreen, 0
+bind = SUPER,F,fullscreen, 0
+bind = SUPERSHIFT,F,fullscreen,1
 bind = SUPER,Space,togglefloating,
 bind = SUPERSHIFT,Space,togglesplit,
 bind = SUPER,S,pseudo,
