[UP] better scalling for screen

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor = eDP-1, 1920x1080@60, 0x0,1
 workspace = eDP-1, 2
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
-monitor = desc:AOC U32E2WG6 QELM5JA000186, preferred, 1920x0, 1.5
+monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
 
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
