[UP] clean monitor config & delete previous polkit used

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,14 +7,14 @@ monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
 monitor = ,preferred, auto, 1
+# monitor = , preferred, auto, 1, mirror, eDP-1 # Mirror
 workspace = HDMI-A-1, 1
-
-# monitor = , preferred, auto, 1, mirror, eDP-1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
+exec-once = swww init
 exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
-exec-once = swww init; swww kill; swww init
+# exec-once = swww init; swww kill; swww init
 
 exec = ~/.config/hypr/scripts/notifications
 
@@ -33,7 +33,6 @@ exec-once = swayidle -w \
                 resume 'brightnessctl --restore' \
             before-sleep '~/.config/hypr/scripts/lockscreen'
 
-# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=/usr/lib/polkit-1/polkitd
 
 exec-once = wal -R
