[UP] keybinding gnome settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,9 +12,8 @@ workspace = HDMI-A-1, 1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
-exec-once = swww init
 exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
-# exec-once = swww init; swww kill; swww init
+exec-once = swww init; swww kill; swww init
 
 exec = ~/.config/hypr/scripts/notifications
 
@@ -252,8 +251,8 @@ bind = $mainMod SHIFT, T ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
 bind = $mainMod SHIFT, I ,exec,$editor-everywhere
 bind = $mainMod SHIFT, W ,exec,$browser
-bind = $mainMod SHIFT, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
+bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 bind = CTRL SHIFT, Escape, exec, btop
 
 bind = $mainMod, D, exec,$appmenu
