[UP] window gaps and rouding

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,8 +12,8 @@ workspace = HDMI-A-1, 1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
+exec-once = swww init
 exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
-exec-once = swww init; swww kill; swww init
 
 exec = ~/.config/hypr/scripts/notifications
 
@@ -63,8 +63,8 @@ general {
     # main_mod = SUPER
 
     gaps_in = 2
-    gaps_out = 7
-    border_size = 4
+    gaps_out = 4
+    border_size = 3
 
     layout = dwindle
 
@@ -103,7 +103,7 @@ group {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 4       # Original: 10
+    rounding = 2       # Original: 10
 
     # Shadow
     drop_shadow = yes
