[UP] swww trick to init at startup

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,8 +12,8 @@ workspace = HDMI-A-1, 1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
-exec-once = swww init
 exec-once = swww img ~/.config/hypr/wallpapers/nature-blue-simplist.jpg
+exec-once = swww init; swww kill; swww init
 
 exec = ~/.config/hypr/scripts/notifications
 
