--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -282,7 +282,7 @@ bind = ,Print, exec, $screenshot --now
 bind = CTRL, Print, exec, $screenshot --in5
 bind = SHIFT, Print, exec, $screenshot --in10
 bind = $mainMod, Print, exec, $screenshot --win
-bind = $mainMod, Print, exec, $screenshot --area
+bind = $mainMod CTRL, Print, exec, $screenshot --area
 
 bind = $mainMod SHIFT CTRL, S, exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
