[UP] new keybinding for colorpicker (conflict) + lint

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -261,7 +261,7 @@ bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
 
 bind = $mainMod, N, exec,nm-connection-editor
-bind = $mainMod, P, exec,$colorpicker
+bind = $mainMod, C, exec,$colorpicker
 bind = CTRL ALT,L, exec, $suspend
 
 bindm = SUPER,mouse:272,movewindow
@@ -287,7 +287,7 @@ bind = $mainMod CTRL, Print, exec, $screenshot --area
 bind = $mainMod SHIFT CTRL, S, exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
 bind = $mainMod, Q, killactive,
-bind = CTRL ALT, Delete,exit,
+bind = CTRL ALT, Delete, exit,
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen,1
 bind = $mainMod, Space, togglefloating,
