[ADD] new window rule for xwaylandvideobridge

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -207,6 +207,13 @@ windowrule = move 0 0,wlogout
 windowrule = size 100% 100%,wlogout
 windowrule = animation slide,wlogout
 
+
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
 #windowrule = move 69 420,abc
 #windowrule = size 420 69,abc
 #windowrule = tile,xyz
