--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,6 +39,8 @@ exec-once = wal -R
 
 exec-once = nm-applet --indicator
 
+exec-once = xwaylandvideobridge
+
 input {
     kb_layout = fr
     kb_variant =
