--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,14 +1,15 @@
 monitor = eDP-1, 1920x1080@60, 0x0,1
-workspace = eDP-1, 2
+workspace = eDP-1, 1
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
 monitor = desc:AOC U32E2WG6 QELM5JA000186, 2560x1440@60, 1920x0, 1
 
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, -1920x0, 1
 
-monitor = ,preferred, auto, 1
+monitor = ,1920x1080@60, 1920x0, 1
+# monitor = ,preferred, auto, 1
 # monitor = , preferred, auto, 1, mirror, eDP-1 # Mirror
-workspace = HDMI-A-1, 1
+workspace = HDMI-A-1, 2
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
