[UP] swayidle startup call to an exec-once

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec-once = hyprshade auto
 
 exec-once = blueman-applet
 
-exec = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 '~/.config/hypr/scripts/sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
+exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 20%' resume 'brightnessctl --restore' timeout 300 'notify-send "Going to sleep in less a minute"' timeout 360 '~/.config/hypr/scripts/sleep' before-sleep '~/.config/hypr/scripts/lockscreen'
 
 exec-once=/usr/lib/polkit-1/polkitd
 
