[ADD] workspace_swipe_create_new

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -166,6 +166,7 @@ master {
 gestures {
     workspace_swipe = yes
     workspace_swipe_fingers = 3
+    workspace_swipe_create_new = true
 }
 
 misc {
