--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 !README.org
 
-# Keep these directories
+# Keep these directories/files
 !wofi/
 !waybar/
 !hypr/
@@ -13,6 +13,7 @@
 !screenshots/
 !colors/
 !swaync/
+!starship.toml
 
 # Allow screenshots
 !screenshots/**
