[ADD] exec conf file instead of bash script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,7 @@ exec = ~/.config/hypr/scripts/notifications
 
 exec-once = ~/.config/hypr/scripts/statusbar
 
-exec-once = ~/.config/hypr/scripts/startup
+source = ~/.config/hypr/exec.conf
 
 exec-once = hyprshade auto
 
